atualização de telas

--- a/payment.html
+++ b/payment.html
@@ -26,12 +26,12 @@
                 <br>CONTA PARA DEPÓSITO: 
                 <br>AG: 176
                 <br>CP: 1901277-2     Banco: Banestes
-                <br>PICPAY: Acesse o link: https://picpay.me/jasmine.andrade .
+                <br>PICPAY: Acesse o link: <a>https://picpay.me/jasmine.andrade </a>
+            </div>
             <div class="formRigth">
                 <img class="image" src="picpay.jpeg">
                 <div class="imputs">
-                    <input type="file" id="file"> 
-                    <input type="submit" id="Enviar">
+                  <button>Inscrição >></button>
                </div>
                     
             
