--- a/Retiro2023.index.html
+++ b/Retiro2023.index.html
@@ -30,19 +30,19 @@
             <h2>Retiro Espiritual 2023 - Eu Escolho o Céu</h2>
             <p> Realize o seu cadastro, preenxendo o formulário abaixo! <a href="#"></a> </p>
             <form action="cadastroRetiro.php" method="POST">
-                <div class="text-box">
+                <div class="input-group w50">
                     <label for="nome">Nome:</label>
                     <input type="text" name="NomeCompleto" placeholder="Digite seu nome Completo" required>
                 </div>
-                <div class="input-group ">
+                <div class="input-group w52">
                     <label for="Date">Data de Nascimento:</label>
                     <input type="date" name="DataNascimento" placeholder="dd/mm/aaaa" required>
                 </div>
-                <div class="input-group ">
+                <div class="input-group w52">
                     <label for="CPF">CPF:</label>
                     <input id="Cpf"type="text" name="Cpf" placeholder="Digite seu CPF" required>
                 </div>
-                <div class="input-group ">
+                <div class="input-group w51">
                     <label for="Sexo">Sexo:</label>
                     <select name="sexo">
                         <option selected enable></option>
@@ -50,7 +50,7 @@
                         <option value="feminino">Feminino</option>
                     </select>
                 </div>
-                <div class="input-group ">
+                <div class="input-group w51">
                     <label for="est_Civil">Estado Civil:</label>
                     <select name="EstadoCivil">
                         <option selected enable></option>
@@ -58,27 +58,27 @@
                         <option value="solteiro">Solteriro(a)</option>
                     </select>
                 </div>
-                <div class="input-group ">
+                <div class="input-group w51">
                     <label for="fone">Telefone:</label>
                     <input id="Fone" type="tel" name="Fone" placeholder="(00)0000 0000" required>
                 </div>
-                <div class="text-box">
+                <div class="input-group w50">
                     <label for="End">Endereço:</label>
                     <input type="text" name="Endereço" placeholder="Digite seu Endereço" required>
                 </div>
-                <div class="text-box">
+                <div class="input-group w51">
                     <label for="bairro">Bairro:</label>
                     <input type="text" name="Bairro" placeholder="Digite seu Bairro" required>
                 </div>
-                <div class="text-box ">
+                <div class="input-group w50">
                     <label for="cidade">Cidade:</label>
                     <input type="text" name="Cidade" placeholder="Digite sua Cidade" required>
                 </div>
-                <div class="text-box">
+                <div class="input-group w51">
                     <label for="cep">CEP:</label>
                     <input id="Cep" type="text" name="Cep" placeholder="Digite seu CEP" required>
                 </div>
-                <div class="input-group ">
+                <div class="input-group w51">
                     <label for="Est">Estado:</label>
                     <select name="Estado">
                         <option selected enable></option>
@@ -111,19 +111,19 @@
                         <option value="Tocantins">Tocantins</option>
                     </select>
                 </div>
-                <div class="text-box">
+                <div class="input-group w50">
                     <label for="igreja">IASD:</label>
                     <input type="text" name="Iasd" placeholder="Digite Sua IASD" required>
                 </div>
-                <div class="checked">
+                <div class="input-group w53">
                     <label for="regime">Vegetariano(a): sim?</label>
                     <input type="checkbox" name="reg-alimentar" >
                 </div>
-                <div class="checked">
+                <div class="input-group w53">
                     <label for="cozinha">Cozinha propria: sim?</label>
                     <input type="checkbox" name="cozinha-propria" >
                 </div>
-                <div class="btn">
+                <div class="input-group">
                     <button>Salvar</button>
                 </div>
 
