--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <br>CONTA PARA DEPÓSITO: 
                 <br>AG: 176
                 <br>CP: 1901277-2     Banco: Banestes
-                <br>PICPAY: Acesse o link: <a>https://picpay.me/jasmine.andrade </a>
+                <br>PICPAY: Acesse o link: <a href="https://picpay.me/jasmine.andrade">https://picpay.me/jasmine.andrade</a>
             </div>
             <div class="formRigth">
                 <img class="image" src="picpay.jpeg">
