--- a/index.html
+++ b/index.html
@@ -30,9 +30,11 @@
             </div>
             <div class="formRigth">
                 <img class="image" src="picpay.jpeg">
-                <div class="imputs">
-                  <button>Inscrição >></button>
-               </div>
+                <form action="Retiro2023.index.html">
+                  <div class="imputs">
+                    <button >Inscrição >></button>
+                  </div>
+                </form>
                     
             
             </div>
