--- a/Retiro2023.index.html
+++ b/Retiro2023.index.html
@@ -111,7 +111,7 @@
                         <option value="Tocantins">Tocantins</option>
                     </select>
                 </div>
-                <div class="input-group w50">
+                <div class="input-group w50 w54">
                     <label for="igreja">IASD:</label>
                     <input type="text" name="Iasd" placeholder="Digite Sua IASD" required>
                 </div>
