--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
                  <br class="texto">🔹 Cozinha própria R$130,00
                  <br class="texto">🔹 Prazo das inscrições e pagamento 14/02 (terça-feira)
                  <br class="texto">🔹 Em caso de desistência, não haverá estorno do valor já pago.
+                 <br class="texto">CHAVE PIX CELULAR: 27999067898
                  <br class="texto">CONTA PARA DEPÓSITO: 
                  <br class="texto">AG: 176
                  <br class="texto">CP: 1901277-2     Banco: Banestes
