--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 <body>
      <div class="container1">
             <div class="laterls">
-              <h3 class="texto">RETIRO ESPIRITUAL 2023 -SÃO GABRIEL DA PALHA -EU ESCOLHO O CÉU!</h3>
-                <h2 class="texto">Informações para Pagamento!!!</h2>
+              <h3 class="texto">RETIRO ESPIRITUAL 2023 <br><!---SÃO GABRIEL DA PALHA -->EU ESCOLHO O CÉU!</h3>
+                <!--<h2 class="texto">Informações para Pagamento!!!</h2>-->
                  <br class="texto">🔹Crianças de 0 a 6 anos: não pagam.
                  <br class="texto">🔹7 a 10 anos pagam meia.(R$ 125,00)
                  <br class="texto">🔹Apartir de 11 anos pagam inteira.( R$250,00)
@@ -25,7 +25,7 @@
             </div>
             
             <div class="formLeft" >
-                <img src="poster-retiro.jpeg">
+                <img class="image" src="poster-retiro.jpeg">
             <!--<br>🔹Valor: R$250,00 com alimentação 
             <br><h3>⚠️ ATENÇÃO ⚠️</h3>
             <br>🔹Crianças de 0 a 6 anos: não pagam.
@@ -47,7 +47,7 @@
                     <div class="imputs">
                         <button >Inscrição >></button>
                     </div>
-                    <a>PICPAY: Acesse o link: <a href="https://picpay.me/jasmine.andrade">https://picpay.me/jasmine.andrade</a>
+                    <a>PICPAY:<br><a href="https://picpay.me/jasmine.andrade">https://picpay.me/jasmine.andrade</a>
                     </form>
             </div>
            
