--- a/Retiro2023.index.html
+++ b/Retiro2023.index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-    <meta charset="UTF-8MB4">
+    <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="cadastro.style.css">
@@ -28,7 +28,7 @@
     <div class="box">
         <div class="form-box">
             <h2>Retiro Espiritual 2023 - Eu Escolho o Céu</h2>
-            <p> Realize o seu cadastro, preenxendo o formulário abaixo! <a href="#"></a> </p>
+            <p> Realize o seu cadastro, preenchendo o formulário abaixo! <a href="#"></a> </p>
             <form action="cadastroRetiro.php" method="POST">
                 <div class="input-group w50">
                     <label for="nome">Nome:</label>
